--- a/build.gradle
+++ b/build.gradle
@@ -1,7 +1,7 @@
 buildscript {
-    ext.kotlinVersion = '1.6.10'
-    ext.navigationVersion = '2.4.2'
-    ext.ktlintVersion = '0.44.0'
+    ext.kotlinVersion = '1.6.20'
+    ext.navigationVersion = '2.5.0-rc02'
+    ext.ktlintVersion = '0.45.2'
     ext.hiltVersion = '2.42'
 
     repositories {
@@ -9,7 +9,7 @@ buildscript {
         mavenCentral()
     }
     dependencies {
-        classpath 'com.android.tools.build:gradle:7.3.0-beta01'
+        classpath 'com.android.tools.build:gradle:7.3.0-beta02'
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlinVersion"
         classpath "androidx.navigation:navigation-safe-args-gradle-plugin:$navigationVersion"
         classpath "com.google.dagger:hilt-android-gradle-plugin:$hiltVersion"
@@ -43,6 +43,7 @@ subprojects {
         kotlinOptions {
             freeCompilerArgs += '-opt-in=kotlin.RequiresOptIn'
             freeCompilerArgs += '-opt-in=kotlin.Experimental'
+            freeCompilerArgs += '-Xcontext-receivers'
         }
     }
 }
@@ -64,7 +65,7 @@ ext {
     androidXAnnotations = '1.3.0'
     archLifecycleVersion = '2.5.0-rc01'
     archTestingVersion = '2.1.0'
-    composeVersion = '1.1.1'
+    composeVersion = '1.2.0-rc02'
     coroutinesVersion = '1.6.1'
     dexMakerVersion = '2.12.1'
     espressoVersion = '3.5.0-alpha06'
@@ -77,4 +78,5 @@ ext {
     rulesVersion = '1.0.1'
     timberVersion = '4.7.1'
     truthVersion = '1.1.2'
+    turbineVersion = '0.8.0'
 }
